<resources>
    <string name="app_name">AlarmManagerExample</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_alarm_manager">AlarmManagerExample</string>
	<string name="btCancel">Reset</string>
	<string name="btStart">Start Repeating Timer</string>
	<string name="btOneTime">One-time Timer</string>
	<string name="btTestCase">Test Case</string>
	<string name="btTestCase2">Test Case 2</string>
	<string name="btCancelAlarm">X</string>
	<string name="tvDefault">Default</string>
</resources>